// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object object::all 1`] = `
Array [
  Object {
    "configuration": Object {},
    "display": Object {},
    "father_id": null,
    "id": "21",
    "isVisible": "0",
    "name": "Test jeedom-node",
    "position": null,
  },
]
`;

exports[`object object::byId 1`] = `
Array [
  Object {
    "configuration": Object {},
    "display": Object {},
    "father_id": null,
    "id": "1",
    "isVisible": "1",
    "name": "Maison",
    "position": "1",
  },
]
`;

exports[`object object::full 1`] = `
Array [
  Object {
    "configuration": Object {},
    "display": Object {},
    "eqLogics": Array [],
    "father_id": null,
    "id": "1",
    "isVisible": "1",
    "name": "Maison",
    "position": "1",
  },
]
`;

exports[`object object::fullById 1`] = `
Array [
  Object {
    "configuration": Object {},
    "display": Object {},
    "eqLogics": Array [
      Object {
        "category": Object {
          "automatism": "0",
          "default": "0",
          "energy": "0",
          "heating": "0",
          "light": "0",
          "multimedia": "0",
          "security": "0",
        },
        "cmds": Array [
          Object {
            "alert": null,
            "configuration": Object {},
            "currentValue": 4,
            "display": Object {},
            "eqLogic_id": "204",
            "eqType": "virtual",
            "generic_type": null,
            "html": null,
            "id": "1782",
            "isHistorized": "0",
            "isVisible": "1",
            "logicalId": "light",
            "name": "Lumière",
            "order": "0",
            "subType": "numeric",
            "template": null,
            "type": "info",
            "unite": "",
            "value": null,
          },
        ],
        "comment": null,
        "configuration": Object {},
        "display": Object {},
        "eqReal_id": null,
        "eqType_name": "virtual",
        "generic_type": null,
        "id": "204",
        "isEnable": "1",
        "isVisible": "0",
        "logicalId": "summary1",
        "name": "Résumé",
        "object_id": "1",
        "order": "0",
        "status": Object {
          "danger": 0,
          "lastCommunication": "2018-11-04 18:51:55",
          "timeout": 0,
          "warning": 0,
        },
        "timeout": null,
      },
    ],
    "father_id": null,
    "id": "1",
    "isVisible": "1",
    "name": "Maison",
    "position": "1",
  },
]
`;

exports[`object object::save 1`] = `
Object {
  "configuration": Object {
    "desktop::summaryTextColor": "",
    "mobile::summaryTextColor": "",
    "parentNumber": 0,
    "tagColor": "#000000",
    "tagTextColor": "#FFFFFF",
  },
  "display": null,
  "father_id": null,
  "id": "21",
  "isVisible": "0",
  "name": "Test jeedom-node",
  "position": null,
}
`;
